--- a/css/template.css
+++ b/css/template.css
@@ -1,4 +1,13 @@
-.top-bar{
-    background: red;
-    height: 70px;
+/* Top Bar Section */
+.social-media-icons {
+  background: green;
+  height: 30px;
+}
+.search {
+  background: yellow;
+  height: 30px;
+}
+
+.main-menu ul li {
+  display: inline;
 }
