--- a/css/template.css
+++ b/css/template.css
@@ -1,13 +1,15 @@
+
 /* Top Bar Section */
-.social-media-icons {
-  background: green;
-  height: 30px;
+.social-media-icons{
+	background: green;
+	height: 30px;
 }
-.search {
-  background: yellow;
-  height: 30px;
+.search{
+	background: yellow;
+	height: 30px;
 }
 
-.main-menu ul li {
-  display: inline;
+/* Menus */
+.main-menu ul li, .footer-menu ul li{ 
+	display: inline; 
 }
