--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 /*
-Theme Name: wpBlog
-Author: Bleart Demaku, Florentin Leku, Arber Mustafa
-Description: This is our first theme created by using wordpress. This is a simple blog page.
-Theme Version: 1.0
+Theme Name: Learn WP
+Theme URI: http://www.marcelowebdesign.com
+Author: Marcelo Vieira
+Author URI: http://www.marcelowebdesign.com
+Description: This theme was created by Marcelo Vieira to teach how to create a WordPress theme
+Version: 1.0
 Tags: two-columns, left-sidebar, custom-header, custom-menu, custom-logo, blog
 */
