added wp_query for multiple loops in one page

--- a/style.css
+++ b/style.css
@@ -1,9 +1,7 @@
 /*
 Theme Name: Learn WP
-Theme URI: http://www.marcelowebdesign.com
-Author: Marcelo Vieira
-Author URI: http://www.marcelowebdesign.com
-Description: This theme was created by Marcelo Vieira to teach how to create a WordPress theme
+Author: Bleart Demaku
+Description: This is my first theme!
 Version: 1.0
 Tags: two-columns, left-sidebar, custom-header, custom-menu, custom-logo, blog
 */
