--- a/css/template.css
+++ b/css/template.css
@@ -39,6 +39,14 @@ h4{ font-size: 18px; margin-top: 0; }
 /* Middle Area - Sidebar */
 .sidebar{ background: #f6e497; padding: 20px; margin: 0 0 30px;  }
 
+/* Middle Area - Sidebar - Contact Form 7 */
+.wpcf7 input[type="text"],
+.wpcf7 input[type="email"],
+.wpcf7 textarea
+{
+    width: 100%;
+}
+
 /* Middle Area - Featured News */
 .home .news .format-image h2, .home .news .format-video h2, .home .news .format-standard h2 { color: #000; background: transparent; display: inline-block; padding: 10px 0 5px; font-weight: bold; } 
 .home .news .featured h2{ font-size: 35px; }
